fix: enable mouve events on bookmark-list only when its visible

--- a/index.css
+++ b/index.css
@@ -178,6 +178,10 @@ input {
   transition: all .2s;
   box-shadow: 0px 4px 2px 0px rgba(0, 0, 0, .05);
   min-width: 345px;
+  pointer-events: none;
+}
+.bookmark-dropdown:hover > .bookmark-dropdown__list {
+  pointer-events: auto;
 }
 .bookmark-dropdown__list--active {
   opacity: 1;
